[gd_scene load_steps=12 format=3 uid="uid://755tjml7mgfa"]

[ext_resource type="Script" uid="uid://ctoagax75h2sy" path="res://scripts/ui/upgrade_card.gd" id="1_0hv3p"]
[ext_resource type="FontFile" uid="uid://4xsaqwwtj2c1" path="res://assets/Fonts/PixelOperator8.ttf" id="2_igsks"]
[ext_resource type="Texture2D" uid="uid://55msc8hn2qb3" path="res://assets/Separated/singlecoin.png" id="3_33rkj"]
[ext_resource type="Texture2D" uid="uid://mg1glsugrqrp" path="res://assets/Affinity/uncommoncard.png" id="3_feudy"]
[ext_resource type="Texture2D" uid="uid://tyfnblp315lw" path="res://assets/Affinity/rarecard.png" id="4_dvncl"]
[ext_resource type="FontFile" uid="uid://dj68f2ekgi03i" path="res://assets/Fonts/PixelOperator8-Bold.ttf" id="4_sav2r"]
[ext_resource type="Texture2D" uid="uid://dj0qh5r8eieo1" path="res://assets/Affinity/epiccard.png" id="5_acdrt"]
[ext_resource type="AudioStream" uid="uid://s21q2vmi6db6" path="res://assets/Audios/CoinCollect.wav" id="5_igsks"]
[ext_resource type="Texture2D" uid="uid://crirjsw535c16" path="res://assets/Affinity/commoncard.png" id="6_33rkj"]
[ext_resource type="Texture2D" uid="uid://1q6y2ncx4mi6" path="res://assets/Affinity/chaoscard.png" id="6_sa0xp"]
[ext_resource type="Texture2D" uid="uid://bxbr7d20r1rlo" path="res://assets/Affinity/synergycard.png" id="7_dvncl"]

[node name="UpgradeCard" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 224.0
offset_bottom = 235.0
mouse_filter = 1
script = ExtResource("1_0hv3p")
rarity_outline_textures = Array[Texture2D]([ExtResource("6_33rkj"), ExtResource("3_feudy"), ExtResource("4_dvncl"), ExtResource("5_acdrt"), ExtResource("6_sa0xp"), ExtResource("7_dvncl")])
rarity = 3

[node name="VisualRoot" type="Control" parent="."]

[node name="PriceArea" type="HBoxContainer" parent="VisualRoot"]
offset_left = 5.0
offset_top = 6.0
offset_right = 45.0
offset_bottom = 46.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="VisualRoot/PriceArea"]
layout_mode = 2

[node name="PriceLabel" type="Label" parent="VisualRoot/PriceArea/TextureRect"]
layout_mode = 0
offset_left = 498.0
offset_top = 154.0
offset_right = 544.0
offset_bottom = 170.0
theme_override_fonts/font = ExtResource("2_igsks")

[node name="CoinIcon" type="TextureRect" parent="VisualRoot/PriceArea/TextureRect"]
layout_mode = 0
offset_left = 463.0
offset_top = 142.0
offset_right = 503.0
offset_bottom = 182.0
texture = ExtResource("3_33rkj")
expand_mode = 2

[node name="Icon" type="TextureRect" parent="VisualRoot"]
offset_left = 22.0
offset_top = 146.0
offset_right = 68.2
offset_bottom = 190.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VisualRoot"]
offset_left = 85.0
offset_top = 137.0
offset_right = 489.0
offset_bottom = 197.0
theme_override_fonts/font = ExtResource("2_igsks")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="VisualRoot"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
z_index = 10
offset_left = 9.0
offset_top = 131.0
offset_right = 576.0
offset_bottom = 203.0
theme_override_fonts/font = ExtResource("4_sav2r")
theme_override_font_sizes/font_size = 24

[node name="SFX_Collect" type="AudioStreamPlayer" parent="VisualRoot/Button"]
stream = ExtResource("5_igsks")
bus = &"SFX"

[node name="Outline" type="TextureRect" parent="VisualRoot"]
z_index = -1
offset_right = 5844.9995
offset_bottom = 3339.9998
scale = Vector2(0.1, 0.1)
mouse_filter = 2
texture = ExtResource("6_33rkj")

[node name="HoverArea" type="Control" parent="VisualRoot"]
